[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.37", features = ["serde"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.0"
blake3 = "1.5.1"
bytes = "1.6.0"
console-subscriber = "0.2.0"
dashmap = "5.5.3"
derive_builder = "0.20.0"
derive_more = "0.99.17"
futures = "0.3.30"
http = "1.1.0"
loom = "0.7.1"
nanoid = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
